--- a/scss/_propio.scss
+++ b/scss/_propio.scss
@@ -80,8 +80,8 @@ body {
   align-items: center;
   text-align: center;
   justify-content: center;
-  padding-top: 3rem;
-  margin-bottom: 1.5rem;
+  padding-top: 4rem;
+  margin-bottom: 2.5rem;
 }
 .caja-titulo-qsomos__titulo {
   font-size: 4rem;
@@ -206,7 +206,7 @@ body {
 //COTIZACIONES
 .main-cotizaciones {
   width: 100%;
-  height: 100vh;
+  min-height: 70vh;
   
 }
 .layout-cotizaciones {
@@ -216,7 +216,9 @@ body {
   background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../imagenes/cotizarmain-min.jpg);
   padding-top: 10rem;
   background-size: cover;
+  color: black
 }
+//CONTACTO
 .main-contacto{
   width: 100%;
   height: 100vh;
