--- a/css/destino.css
+++ b/css/destino.css
@@ -7870,7 +7870,7 @@ body {
   text-align: center; }
 
 .main-qsomos {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../imagenes/equipo-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../imagenes/grupo.jpg);
   width: 100%;
   min-height: 100vh;
   background-size: cover; }
@@ -7971,10 +7971,6 @@ body {
   color: white;
   text-shadow: 2px 2px 6px #000000; }
 
-.titulo-img:hover {
-  font-size: 2.5rem;
-  transition: 1s; }
-
 .parrafo-img {
   width: 100%;
   height: 50%;
@@ -7982,10 +7978,6 @@ body {
   color: white;
   text-shadow: 2px 2px 6px #000000;
   font-size: 1rem; }
-
-.parrafo-img:hover {
-  font-size: 1.5rem;
-  transition: 1s; }
 
 .caja-item {
   padding: 1.5rem;
